# speech_to_text

./: .gitignore  CHANGELOG.md  README.md  files.txt  pubspec.yaml
.github/: main.yml
.github/workflows/: main.yml  master.yml  publish.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/gradle/wrapper/: gradle-wrapper.properties
example/assets/sounds/: speech_to_text_cancel.m4r  speech_to_text_listening.m4a  speech_to_text_listening.m4r  speech_to_text_success.m4r
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  port.dart  provider_example.dart  stress.dart
example/test/: widget_test.dart
examples/audio_player_interaction/: README.md  pubspec.yaml
examples/audio_player_interaction/android/app/: build.gradle
examples/audio_player_interaction/ios/: Podfile
examples/audio_player_interaction/lib/: main.dart  sound_player.dart
examples/audio_player_interaction/test/: widget_test.dart
examples/audio_player_interaction/web/: index.html  manifest.json
ios/: speech_to_text.podspec
ios/Classes/: SwiftSpeechToTextPlugin.swift
lib/: speech_recognition_error.dart  speech_recognition_error.g.dart  speech_recognition_event.dart  speech_recognition_result.dart  speech_recognition_result.g.dart  speech_to_text.dart  speech_to_text_provider.dart
multi_platform_example/: README.md  pubspec.yaml
multi_platform_example/android/app/: build.gradle
multi_platform_example/integration_test/: app_test.dart
multi_platform_example/ios/Runner/: Info.plist
multi_platform_example/ios/Runner.xcodeproj/: project.pbxproj
multi_platform_example/lib/: main.dart  speech_main.dart
multi_platform_example/test/: widget_test.dart
multi_platform_example/web/: index.html  manifest.json
speech_to_text/: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  codestats.csv  pubspec.yaml  pubspec_overrides.yaml
speech_to_text/.github/workflows/: master.yml
speech_to_text/android/: .project  build.gradle
speech_to_text/android/gradle/: local.properties  settings.gradle
speech_to_text/darwin/: speech_to_text.podspec
speech_to_text/darwin/Classes/: SpeechToTextPlugin.swift
speech_to_text/darwin/speech_to_text/: Package.resolved  Package.swift
speech_to_text/example/: .metadata  README.md  pubspec.yaml  pubspec_overrides.yaml
speech_to_text/example/android/: .project  build.gradle  gradle.properties  settings.gradle
speech_to_text/example/lib/: generated_plugin_registrant.dart  main.dart  port.dart  provider_example.dart  recognition_results_widget.dart  repro.dart  stress.dart
speech_to_text/example/linux/: CMakeLists.txt
speech_to_text/example/web/: index.html
speech_to_text/example/windows/: CMakeLists.txt
speech_to_text/ios/Classes/: SpeechToTextPlugin.h  SpeechToTextPlugin.m  SwiftSpeechToTextPlugin.swift
speech_to_text/lib/: balanced_alternates.dart  speech_recognition_error.dart  speech_recognition_error.g.dart  speech_recognition_event.dart  speech_recognition_result.dart  speech_recognition_result.g.dart  speech_to_text.dart  speech_to_text_provider.dart  speech_to_text_web.dart  web_speech.dart
speech_to_text/macos/: speech_to_text.podspec
speech_to_text/macos/Classes/: SpeechToTextPlugin.swift
speech_to_text/scripts/: mobileBrowser.sh  tcov.sh
speech_to_text/test/: balanced_alternates_test.dart  speech_recognition_error_test.dart  speech_recognition_event_test.dart  speech_recognition_result_test.dart  speech_recognitions_words_test.dart  speech_to_text_provider_test.dart  speech_to_text_test.dart  test_speech_channel_handler.dart  test_speech_listener.dart  test_speech_to_text_platform.dart
speech_to_text_linux/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
speech_to_text_linux/lib/: speech_to_text_linux.dart
speech_to_text_linux/linux/: CMakeLists.txt  speech_to_text_linux_plugin.cc
speech_to_text_linux/linux/include/speech_to_text_linux/: speech_to_text_linux_plugin.h
speech_to_text_linux/scripts/: setup_vosk.sh
speech_to_text_macos/: .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
speech_to_text_macos/example/: README.md  pubspec.yaml
speech_to_text_macos/example/lib/: main.dart
speech_to_text_macos/example/test/: widget_test.dart
speech_to_text_macos/lib/: speech_to_text_macos.dart
speech_to_text_macos/macos/: speech_to_text_macos.podspec
speech_to_text_macos/macos/Classes/: SpeechToTextMacosPlugin.swift
speech_to_text_macos/test/: speech_to_text_macos_test.dart
speech_to_text_platform_interface/: .packages  CHANGELOG.md  README.md  pubspec.yaml
speech_to_text_platform_interface/.dart_tool/: package_config.json
speech_to_text_platform_interface/lib/: method_channel_speech_to_text.dart  speech_to_text_platform_interface.dart
speech_to_text_platform_interface/test/: method_channel_speech_to_text_test.dart  speech_listen_options_test.dart  test_speech_channel_handler.dart
speech_to_text_web/: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
speech_to_text_web/lib/: speech_recognition_result.dart  speech_recognition_result.g.dart  speech_to_text_web.dart  web_speech.dart
speech_to_text_windows/: CHANGELOG.md  README.md  pubspec.yaml
speech_to_text_windows/example/: .metadata  pubspec.yaml
speech_to_text_windows/example/lib/: main.dart
speech_to_text_windows/example/test/: widget_test.dart
speech_to_text_windows/lib/: speech_to_text_windows.dart  speech_to_text_windows_method_channel.dart
speech_to_text_windows/windows/: CMakeLists.txt  speech_to_text_windows.cpp  speech_to_text_windows_plugin.cpp  speech_to_text_windows_plugin.h
speech_to_text_windows/windows/include/speech_to_text_windows/: speech_to_text_windows.h  speech_to_text_windows_plugin.cpp  speech_to_text_windows_plugin.h
test/: speech_recognition_error_test.dart  speech_recognition_result_test.dart  speech_to_text_provider_test.dart  speech_to_text_test.dart  test_speech_channel_handler.dart  test_speech_listener.dart
(+54 files in other folders)
